<resources>
    <string name="app_name">Assignment4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_search">Search</string>
    <string name="nav_title_filtered">Filtered</string>
    <string name="nav_title_saved">Saved Hotels</string>
    <string name="tab_title_nearby">Nearby</string>
    <string name="tab_title_popular">Popular</string>
    <string name="tab_title_all">All</string>
    <string name="toolbar_title_location">Location</string>
    <string name="toolbar_title_location_name">DhaKa</string>
    <string name="card_text_rating_values">4.5</string>
    <string name="card_text_rating_total">(21 ratings)</string>
    <string name="card_text_charges">$89 /day</string>
    <string name="card_text_hotel_name">The Westeen</string>
    <string name="card_text_hotel_address">Gulshan Circle 2, Dhaka</string>
    <string name="card_text_hotel_facilities">Free Wifi  *  Swimming</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="chip_text_filter">Filter</string>
    <string name="label_location">Location</string>
    <string name="hint_text_location">DhaKa</string>
    <string name="label_check_in">Check In</string>
    <string name="label_check_out">Check Out</string>
    <string name="hint_text_check_in">24 Aug, 2019</string>
    <string name="hint_text_check_out">27 Aug, 2018</string>
    <string name="btn_search_now">Search Now</string>
    <string name="card_text_hotel_name_tulip">Tulip Hotel</string>
    <string name="card_text_hotel_tulip_address">Coxbazar Chittagong</string>
    <string name="label_title_top_searches">Top Searches</string>
    <string name="label_title_recent_searches">Recent Searches</string>
    <string name="label_count">Count</string>
    <string name="label_rooms">Rooms</string>
    <string name="hint_count_value">2 Adults</string>
    <string name="hint_text_room_values">03</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    <string name="label_title_Filter">Filter</string>
    <string name="label_sort_by">Sort By</string>
    <string name="label_rating">Rating</string>
    <string name="label_price_range">Price Range</string>
    <string name="hint_text_price">Price</string>
    <string name="hint_text_price_range">$$>$$$</string>
    <string name="label_range">$90-$350</string>
    <string name="label_average_value">Average-$250</string>
    <string name="btn_filter_now">Filter Now</string>
    <string name="chip_label_none">None</string>
    <string name="chip_label_1_star">1</string>
    <string name="chip_label_2_star">2</string>
    <string name="chip_label_3_star">3</string>
    <string name="chip_label_4_star">4</string>
    <string name="chip_label_5_star">5</string>
    <string name="card_text_hotel_discount">Get 50% Off</string>
    <string name="label_no_saved_hotel">No Saved Hotels</string>
    <string name="toolbar_title_save_hotel">Saved</string>
    <string name="label_no_saved_history">No History</string>
    <string name="toolbar_title_no_history">History</string>
</resources>
