<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet"
    app:cardBackgroundColor="@color/cardBackgroundColor"
    android:padding="16dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/btn_cancel"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/label_title_Filter"
                android:gravity="center"
                android:textColor="@color/textColorMain"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title_h1"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/btn_reset"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:text="@string/label_sort_by"
            android:gravity="start"
            android:textAllCaps="true"
            android:textColor="@color/textColorMain"
            android:textStyle="normal"
            android:textSize="@dimen/text_size_title_h2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_large_margin"
            android:background="@drawable/bg_sort_by_price"
            android:padding="@dimen/activity_vertical_margin">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/hint_text_price"
                android:textColor="@color/textColorMainLight"
                android:textStyle="normal"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/hint_text_price_range"
                android:textColor="@color/textColorMainLight"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_arrow_drop_down"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:text="@string/label_rating"
            android:textAllCaps="true"
            android:gravity="start"
            android:textColor="@color/textColorMain"
            android:textStyle="normal"
            android:textSize="@dimen/text_size_title_h2"/>
        <android.support.design.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_large_margin"
            app:singleSelection="true"
            app:chipSpacing="@dimen/activity_vertical_margin">
            <android.support.design.chip.Chip
                android:id="@+id/chip_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_label_none"
                android:clickable="true"
                android:focusable="true"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"
                style="@style/MyChipTheme"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            <android.support.design.chip.Chip
                android:id="@+id/chip_1star"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_label_1_star"
                android:clickable="true"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:chipIcon="@drawable/ic_star_unpressed"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"/>
            <android.support.design.chip.Chip
                android:id="@+id/chip_2star"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_label_2_star"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"
                android:clickable="true"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:chipIcon="@drawable/ic_star_unpressed" />
            <android.support.design.chip.Chip
                android:id="@+id/chip_3star"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/chip_label_3_star"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                app:chipIcon="@drawable/ic_star_unpressed" />
            <android.support.design.chip.Chip
                android:id="@+id/chip_4star"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_label_4_star"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:chipIcon="@drawable/ic_star_unpressed" />
            <android.support.design.chip.Chip
                android:id="@+id/chip_5star"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_label_5_star"
                app:chipStartPadding="@dimen/activity_vertical_margin"
                app:chipEndPadding="@dimen/activity_vertical_margin"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:chipIcon="@drawable/ic_star_unpressed" />
        </android.support.design.chip.ChipGroup>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:text="@string/label_price_range"
            android:textAllCaps="true"
            android:gravity="start"
            android:textColor="@color/textColorMain"
            android:textStyle="normal"
            android:textSize="@dimen/text_size_title_h2"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_large_margin">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:alpha="0.5"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/img_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_marginStart="@dimen/activity_large_margin"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_tab"/>
                <android.support.v7.widget.AppCompatSeekBar
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:min="0"
                    android:max="350"
                    android:minHeight="8dp"
                    android:progress="300"
                    android:thumb="@drawable/ic_progress"
                    android:progressTint="@color/colorPrimary"/>
            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_range"
                android:gravity="start"
                android:textColor="@color/textColorMain"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_average_value"
                android:gravity="end"
                android:textColor="@color/textColorMain"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/btn_filter_now"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_body_small"
                android:background="@drawable/bg_room_price"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="36dp"
                android:padding="@dimen/inner_margin"
                app:srcCompat="@drawable/ic_map"
                android:background="@drawable/bg_room_price"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>