<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorActivityBackground"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inner_margin"
            android:text="@string/toolbar_title_explore"
            android:gravity="start"
            android:textColor="@color/textColorMain"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title_h1"/>
        <android.support.design.chip.Chip
            android:id="@+id/chip_Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inner_margin"
            android:text="@string/chip_text_filter"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@color/textColorMain"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="@dimen/text_size_body"
            app:chipIconSize="20dp"
            app:iconStartPadding="@dimen/activity_vertical_margin"
            app:chipEndPadding="@dimen/activity_vertical_margin"
            app:chipStartPadding="@dimen/activity_vertical_margin"
            app:chipBackgroundColor="@color/textColorWhite"
            app:chipIcon="@drawable/ic_filter"
            app:closeIconSize="20dp"/>
    </LinearLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location"
                android:layout_gravity="top|start"
                android:textColor="@color/textColorMainLight"
                android:textStyle="normal"
                android:textSize="@dimen/text_size_body_small"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_sort_by_price"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/inner_margin"
                    android:text="@string/hint_text_location"
                    android:textColor="@color/textColorMain"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_size_body"/>
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_send"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_check_in"
                        android:layout_gravity="top|start"
                        android:textColor="@color/textColorMainLight"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body_small"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_text_check_in"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:background="@drawable/bg_sort_by_price"
                        android:textColor="@color/textColorMain"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_check_out"
                        android:layout_gravity="top|start"
                        android:textColor="@color/textColorMainLight"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body_small"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:background="@drawable/bg_sort_by_price"
                        android:text="@string/hint_text_check_out"
                        android:textColor="@color/textColorMain"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_large_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_count"
                        android:layout_gravity="top|start"
                        android:textColor="@color/textColorMainLight"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body_small"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/inner_margin"
                        android:text="@string/hint_count_value"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:background="@drawable/bg_sort_by_price"
                        android:textColor="@color/textColorMain"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_rooms"
                        android:layout_gravity="top|start"
                        android:textColor="@color/textColorMainLight"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body_small"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_sort_by_price"
                        android:layout_marginEnd="@dimen/inner_margin"
                        android:text="@string/hint_text_room_values"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:textColor="@color/textColorMain"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_body"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/btn_search_now"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/text_size_body_small"
                    android:background="@drawable/bg_room_price"/>
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="36dp"
                    android:padding="@dimen/inner_margin"
                    app:srcCompat="@drawable/ic_map"
                    android:background="@drawable/bg_room_price"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/label_title_top_searches"
                android:gravity="start"
                android:textAllCaps="true"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recv_top_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/listitem_top_searches"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/label_title_recent_searches"
                android:gravity="start"
                android:textAllCaps="true"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:textSize="@dimen/text_size_body"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recv_recent_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/listitem_top_searches"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>